# metis

./: .gitignore  README.md  pyproject.toml
backend/cpp/: CMakeLists.txt
backend/cpp/include/: backtest.hpp
backend/cpp/include/metis/: types.hpp
backend/cpp/include/metis/analytics/: indicators.hpp
backend/cpp/include/metis/app/: backtester_app.hpp  backtester_workflow.hpp
backend/cpp/include/metis/app/approach/: approach_runner.hpp  buy_and_hold_runner.hpp  discrete_grid_runner.hpp  ridge_runner.hpp
backend/cpp/include/metis/backtest/: execution_accounting.hpp  metrics.hpp  optimization.hpp  position_sizing_policy.hpp  simulation.hpp  simulation_rules.hpp  trade_exit_policy.hpp  training_candidate_selector.hpp  walk_forward.hpp  walk_forward_splitter.hpp
backend/cpp/include/metis/cli/: approach.hpp  cli_config.hpp  help.hpp  parse_common.hpp
backend/cpp/include/metis/cli/approach/: buy_and_hold_cli.hpp  discrete_grid_cli.hpp  ridge_cli.hpp
backend/cpp/include/metis/config/: run_config.hpp
backend/cpp/include/metis/core/: date.hpp  file_io.hpp
backend/cpp/include/metis/data/: csv_loader.hpp
backend/cpp/include/metis/model/: model.hpp  ridge_regression.hpp
backend/cpp/include/metis/optimization/: discrete_grid_search.hpp  optimizer.hpp
backend/cpp/include/metis/reporting/: console_summary.hpp  json_writer.hpp  training_results_writer.hpp
backend/cpp/include/metis/strategy/: regime_strategy.hpp  regime_strategy_rules.hpp  ridge_strategy.hpp  ridge_strategy_rules.hpp  strategy.hpp  strategy_factory.hpp  strategy_rules_factory.hpp  strategy_type.hpp  threshold_strategy.hpp  threshold_strategy_rules.hpp
backend/cpp/src/: backtest.cpp  main.cpp
backend/cpp/src/analytics/: indicators.cpp
backend/cpp/src/app/: backtester_app.cpp  backtester_workflow.cpp
backend/cpp/src/app/approach/: buy_and_hold_runner.cpp  discrete_grid_runner.cpp  ridge_runner.cpp
backend/cpp/src/backtest/: backtest.cpp  buy_and_hold_simulation.cpp  execution_accounting.cpp  metrics.cpp  position_sizing_policy.cpp  simulation.cpp  simulation_rules.cpp  trade_exit_policy.cpp  training_candidate_selector.cpp  walk_forward.cpp  walk_forward_splitter.cpp
backend/cpp/src/cli/: approach.cpp  cli_config.cpp  help.cpp  parse_common.cpp
backend/cpp/src/cli/approach/: buy_and_hold_cli.cpp  discrete_grid_cli.cpp  ridge_cli.cpp
backend/cpp/src/config/: run_config.cpp
backend/cpp/src/core/: date.cpp  file_io.cpp
backend/cpp/src/data/: csv_loader.cpp
backend/cpp/src/model/: ridge_regression.cpp
backend/cpp/src/optimization/: discrete_grid_search.cpp
backend/cpp/src/reporting/: console_summary.cpp  json_writer.cpp  training_results_writer.cpp
backend/cpp/src/strategy/: regime_strategy.cpp  regime_strategy_rules.cpp  ridge_strategy.cpp  ridge_strategy_rules.cpp  strategy.cpp  strategy_factory.cpp  strategy_rules_factory.cpp  strategy_type.cpp  threshold_strategy.cpp  threshold_strategy_rules.cpp
data/: README.md  SPY.csv
data/processed/QQQ/: 1d.csv
data/processed/SPY/: 1d.csv
scripts/: build-backtester.ps1  build-backtester.sh  fetch-ibkr.ps1  fetch-ibkr.sh  fetch-twelvedata.ps1  run-backtest.ps1  run-backtest.sh  run-live-paper.ps1  run-live-paper.sh  setup-wsl-ubuntu.sh
src/metis/: __init__.py
src/metis/backtest/: __init__.py  runner.py
src/metis/data/: __init__.py  ibkr.py  storage.py
src/metis/live/: __init__.py  runner.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.json
ui/public/: latest.json
ui/src/: App.tsx  styles.css
